# basicModule

./: setup.cfg  setup.py
linux-commands/: linux_commands.py  main.py
