[metadata]
name = linux-commands
version = 1.0
author = Grisha Vlasko
author_email = grishavlasko200@gmail.com
description = Basic linux commands
url = https://github.com/Grotawred/basicModule
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = linux-commands
packages = find:
python_requires = >=3.6

[options.packages.find]
where = linux-commands